@@ -17,6 +17,17 @@ committal in the CVS repository !
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
 
+October 23, 2015 G.Cosmo                 geom-csg-V10-00-09
+- Fixed Coverity defect in G4CutTubs::GetMaxMinZ().
+
+October 22, 2015 G.Cosmo
+- Introduced check in G4Sphere::DistanceToIn(p,v) for
+  concave Theta and point located on the origin. Also make proper use of
+  radial tolerance in DistanceToOut(p,v).
+
+September 3, 2015  T.Nikitina
+- Updated unit test for sphere.
+
 May 20, 2015  T.Nikitina                 geom-csg-V10-00-08
 - Fixed DistanceToOut(p) and Inside(p) in G4Sphere for sphere cut in theta
   for point (0,0,0) and for cases when Start/End angle have not to be taken
